<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/common_padding_min"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tvOperation"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        tools:text="5x2"
        android:padding="@dimen/common_padding_min"
        android:textAppearance="?attr/textAppearanceHeadline6"
        android:textColor="?colorOnSurface"
        android:background="?colorSurface"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        style="@style/MyTextView"/>

    <TextView
        android:id="@+id/tvResult"
        android:layout_width="0dp"
        android:layout_height="0dp"
        tools:text="10.0"
        android:layout_marginBottom="@dimen/common_padding_max"
        android:gravity="center_vertical|end"
        android:padding="@dimen/common_padding_min"
        android:textAppearance="?attr/textAppearanceHeadline3"
        android:textColor="?colorOnSurface"
        android:background="?colorSurface"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvOperation"
        app:layout_constraintBottom_toTopOf="@id/linearlayoutTop"/>

    <TextView
        android:id="@+id/tvWeb"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="www.plazuela81.com"
        android:gravity="center_vertical|center_horizontal"
        android:textAppearance="?attr/textAppearanceHeadline6"
        android:textColor="?colorOnSurface"
        android:background="@color/cyan_900"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvResult"
        app:layout_constraintBottom_toTopOf="@id/linearlayoutTop" />

    <LinearLayout
        android:id="@+id/linearlayoutBottom"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="horizontal"
        app:layout_constraintDimensionRatio="H, 4:1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:paddingEnd="@dimen/common_padding_max"
        android:paddingBottom="@dimen/common_padding_min"
        android:paddingTop="@dimen/common_padding_min"
        app:layout_constraintBottom_toBottomOf="parent">

        <Button
            android:id="@+id/btnPoint"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="22"
            android:text="@string/calc_btn_point"
            android:textSize="@dimen/calc_btn_text_size"
            android:textColor="@color/cyan_800"
            android:backgroundTint="@color/white"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="@dimen/common_padding_min"
            android:onClick="onClickButton"/>
        <Button
            android:id="@+id/btnZero"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="22"
            android:text="@string/calc_btn_zero"
            android:textSize="@dimen/calc_btn_text_size"
            android:textColor="@color/cyan_800"
            android:backgroundTint="@color/white"
            android:layout_marginStart="16dp"
            android:onClick="onClickButton"/>

        <Button
            android:id="@+id/btnResolve"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="@dimen/common_padding_max"
            android:layout_weight="50"
            android:backgroundTint="#2F7781"
            android:onClick="onClickButton"
            android:text="@string/calc_btn_resolve"
            android:textSize="@dimen/calc_btn_text_size" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearlayoutPreBottom"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="horizontal"
        app:layout_constraintDimensionRatio="H, 4:1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:paddingEnd="@dimen/common_padding_max"
        android:paddingBottom="@dimen/common_padding_min"
        android:paddingTop="@dimen/common_padding_min"
        app:layout_constraintBottom_toTopOf="@id/linearlayoutBottom">

        <Button
            android:id="@+id/btnOne"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="25"
            android:text="@string/calc_btn_one"
            android:textSize="@dimen/calc_btn_text_size"
            android:textColor="@color/cyan_800"
            android:backgroundTint="@color/white"
            android:layout_marginStart="@dimen/common_padding_max"
            android:onClick="onClickButton"/>
        <Button
            android:id="@+id/btnTwo"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="25"
            android:text="@string/calc_btn_two"
            android:textSize="@dimen/calc_btn_text_size"
            android:textColor="@color/cyan_800"
            android:backgroundTint="@color/white"
            android:layout_marginStart="@dimen/common_padding_max"
            android:onClick="onClickButton"/>
        <Button
            android:id="@+id/btnThree"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="25"
            android:text="@string/calc_btn_three"
            android:textSize="@dimen/calc_btn_text_size"
            android:textColor="@color/cyan_800"
            android:backgroundTint="@color/white"
            android:layout_marginStart="@dimen/common_padding_max"
            android:onClick="onClickButton"/>

        <Button
            android:id="@+id/btnSum"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="@dimen/common_padding_max"
            android:layout_weight="25"
            android:textColor="@color/cyan_900"
            android:backgroundTint="@color/cyan_100"
            android:onClick="onClickButton"
            android:text="@string/calc_btn_mas"
            android:textSize="@dimen/calc_btn_text_size" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearlayoutMiddle"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="horizontal"
        app:layout_constraintDimensionRatio="H, 4:1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:paddingEnd="@dimen/common_padding_max"
        android:paddingBottom="@dimen/common_padding_min"
        android:paddingTop="@dimen/common_padding_min"
        app:layout_constraintBottom_toTopOf="@id/linearlayoutPreBottom">

        <Button
            android:id="@+id/btnFour"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="25"
            android:text="@string/calc_btn_four"
            android:textSize="@dimen/calc_btn_text_size"
            android:textColor="@color/cyan_800"
            android:backgroundTint="@color/white"
            android:layout_marginStart="@dimen/common_padding_max"
            android:onClick="onClickButton"/>
        <Button
            android:id="@+id/btnFive"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="25"
            android:text="@string/calc_btn_five"
            android:textSize="@dimen/calc_btn_text_size"
            android:textColor="@color/cyan_800"
            android:backgroundTint="@color/white"
            android:layout_marginStart="@dimen/common_padding_max"
            android:onClick="onClickButton"/>
        <Button
            android:id="@+id/btnSix"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="25"
            android:text="@string/calc_btn_six"
            android:textSize="@dimen/calc_btn_text_size"
            android:textColor="@color/cyan_800"
            android:backgroundTint="@color/white"
            android:layout_marginStart="@dimen/common_padding_max"
            android:onClick="onClickButton"/>
        <Button
            android:id="@+id/btnResta"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="25"
            android:text="@string/calc_btn_resta"
            android:textSize="@dimen/calc_btn_text_size"
            android:textColor="@color/cyan_900"
            android:backgroundTint="@color/cyan_100"
            android:layout_marginStart="@dimen/common_padding_max"
            android:onClick="onClickButton"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearlayoutPreTop"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="horizontal"
        app:layout_constraintDimensionRatio="H, 4:1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:paddingEnd="@dimen/common_padding_max"
        android:paddingBottom="@dimen/common_padding_min"
        android:paddingTop="@dimen/common_padding_min"
        app:layout_constraintBottom_toTopOf="@id/linearlayoutMiddle">

        <Button
            android:id="@+id/btnSeven"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="25"
            android:text="@string/calc_btn_seven"
            android:textSize="@dimen/calc_btn_text_size"
            android:textColor="@color/cyan_800"
            android:backgroundTint="@color/white"
            android:layout_marginStart="@dimen/common_padding_max"
            android:onClick="onClickButton"/>
        <Button
            android:id="@+id/btnEight"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="25"
            android:text="@string/calc_btn_eight"
            android:textSize="@dimen/calc_btn_text_size"
            android:textColor="@color/cyan_800"
            android:backgroundTint="@color/white"
            android:layout_marginStart="@dimen/common_padding_max"
            android:onClick="onClickButton"/>
        <Button
            android:id="@+id/btnNine"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="25"
            android:text="@string/calc_btn_nine"
            android:textSize="@dimen/calc_btn_text_size"
            android:textColor="@color/cyan_800"
            android:backgroundTint="@color/white"
            android:layout_marginStart="@dimen/common_padding_max"
            android:onClick="onClickButton"/>
        <Button
            android:id="@+id/btnMultiplicar"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="25"
            android:text="@string/calc_btn_multiplicar"
            android:textAllCaps="false"
            android:textSize="@dimen/calc_btn_text_size"
            android:textColor="@color/cyan_900"
            android:backgroundTint="@color/cyan_100"
            android:layout_marginStart="@dimen/common_padding_max"
            android:onClick="onClickButton"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearlayoutTop"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="horizontal"
        app:layout_constraintDimensionRatio="H, 4:1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:paddingEnd="@dimen/common_padding_max"
        android:paddingBottom="@dimen/common_padding_min"
        android:paddingTop="@dimen/common_padding_min"
        app:layout_constraintBottom_toTopOf="@id/linearlayoutPreTop">

        <!-- Este borra las operaciones completas reinicia -->
        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnClear"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="37.5"
            app:icon="@drawable/ic_delete_forever"
            app:iconTint="@color/cyan_900"
            app:iconSize="@dimen/calc_btn_text_size_clear"
            app:iconGravity="textStart"
            app:iconPadding="@dimen/common_padding_none"
            android:backgroundTint="@color/cyan_100"
            android:layout_marginStart="24dp"
            android:onClick="onClickButton"
            android:layout_marginEnd="@dimen/common_padding_min"/>

        <!-- Este borra el último carácter que escribamos -->
        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnDelete"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="16dp"
            android:layout_weight="37.5"
            android:backgroundTint="#2F7781"
            android:onClick="onClickButton"
            app:icon="@drawable/ic_backspace"
            app:iconGravity="textStart"
            app:iconPadding="@dimen/common_padding_none"
            app:iconSize="@dimen/size_button_delete"
            android:paddingStart="24dp"/>

        <Button
            android:id="@+id/btnDiv"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="25"
            android:text="@string/calc_btn_div"
            android:textSize="@dimen/calc_btn_text_size"
            android:textColor="@color/cyan_900"
            android:backgroundTint="@color/cyan_100"
            android:layout_marginStart="24dp"
            android:onClick="onClickButton"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>